--- a/src/styles/variables/_layout.scss
+++ b/src/styles/variables/_layout.scss
@@ -26,6 +26,6 @@ $component-height-large-mobile: 3rem; // 48px
 $component-height-xlarge-mobile: 3.25rem; // 52px
 
 // 경로 변수들
-$image-path: './assets/images/';
+$image-path: '../images/';
 $assets-path: '../assets/';
 $css-path: '../css/';
